--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -174,29 +174,29 @@
 
         <p>鉴于二代车在底盘通过性和三角区定位上的改进，我们依据《路线策略对比图》制定了针对“校际联赛”的高分策略。</p>
 
-            <h3 class="text-teal" style="margin-top: 0;">策略目标 (Target Score)</h3>
-            <table style="width: 100%; text-align: center; margin-top: 10px;">
-                <tr style="font-weight: bold; background: rgba(255,255,255,0.5);">
-                    <td>策略类型</td>
-                    <td>核心配置</td>
-                    <td>目标分数</td>
-                </tr>
-                <tr>
-                    <td>91分策略 (Low Tower)</td>
-                    <td>2个双色三角区 + 2个双色中心区</td>
-                    <td class="text-teal" style="font-size: 20px; font-weight: bold;">166</td>
-                </tr>
-                <tr>
-                    <td>110分策略 (High Tower)</td>
-                    <td>2个双色三角区 + 2个双色中心区 + 110高塔</td>
-                    <td class="text-teal" style="font-size: 20px; font-weight: bold;">178</td>
-                </tr>
-                <tr>
-                    <td>技能赛 (Skills)</td>
-                    <td>110高塔 + 3色中心区 + 1个3色得分区</td>
-                    <td class="text-teal" style="font-size: 20px; font-weight: bold;">184</td>
-                </tr>
-            </table>
+        <h3 class="text-teal" style="margin-top: 0;">策略目标 (Target Score)</h3>
+        <table style="width: 100%; text-align: center; margin-top: 10px;">
+            <tr style="font-weight: bold; background: rgba(255,255,255,0.5);">
+                <td>策略类型</td>
+                <td>核心配置</td>
+                <td>目标分数</td>
+            </tr>
+            <tr>
+                <td>91分策略 (Low Tower)</td>
+                <td>2个双色三角区 + 2个双色中心区</td>
+                <td class="text-teal" style="font-size: 20px; font-weight: bold;">166</td>
+            </tr>
+            <tr>
+                <td>110分策略 (High Tower)</td>
+                <td>2个双色三角区 + 2个双色中心区 + 110高塔</td>
+                <td class="text-teal" style="font-size: 20px; font-weight: bold;">178</td>
+            </tr>
+            <tr>
+                <td>技能赛 (Skills)</td>
+                <td>110高塔 + 3色中心区 + 1个3色得分区</td>
+                <td class="text-teal" style="font-size: 20px; font-weight: bold;">184</td>
+            </tr>
+        </table>
 
         <h3>核心战术执行点</h3>
         <div class="two-column-layout">
@@ -240,9 +240,9 @@
             </ul>
         </div>
 
-        <div class="img-placeholder" style="height: 200px;">
+        <!-- <div class="img-placeholder" style="height: 200px;">
             [图片：赛前检查清单与机器调试照片]
-        </div>
+        </div> -->
 
     </div>
 
@@ -306,7 +306,7 @@
 
     <!-- ================= PAGE 130: 赛后分析 ================= -->
     <div class="sheet">
-        <h1>8.4 赛后技术复盘 (Post-Match Analysis)</h1>
+        <h1>8.4 赛后技术复盘</h1>
 
         <p>赛后（11月8日-9日），全队进行了详细的总结会议，结合《训练记录》中的反馈，我们发现了几个关键的技术瓶颈。</p>
 
@@ -327,10 +327,12 @@
                 </ul>
             </div>
         </div>
+        <img src="assets/ch08/8_4_1.webp" alt="北京市教委机器人大赛参赛照片"
+            style="display: block;height:280px; margin: 10px auto; border-radius: 10px;">
 
-        <div class="img-placeholder" style="height: 200px;">
+        <!-- <div class="img-placeholder" style="height: 200px;">
             [图片：赛后复盘会议，队员正在分析比赛录像]
-        </div>
+        </div> -->
 
     </div>
 
@@ -363,7 +365,6 @@
 
         <p style="margin-top: 40px; text-align: center; font-weight: bold; color: #555;">
             持续改进，永不止步。<br>
-            Continuous Improvement.
         </p>
 
     </div>
