ch08: added 一般策略

--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -167,10 +167,50 @@
             </div>
         </div>
     </div>
+    <div class="sheet">
+        <h1>8.1 一般策略规划</h1>
+        <p>在参与正式竞技前，团队需建立统一的策略框架，确保在技能挑战赛与团队协作赛中表现稳定。</p>
+
+        <h3 class="text-teal">一、 比赛策略规划</h3>
+
+        <h4>A. 技能挑战赛路线规划</h4>
+        <ul class="notebook-list">
+            <li><strong>专人专项职责：</strong> 严格按照训练分工，确保操作手对相应模块的操作熟练度达到肌肉记忆级别。</li>
+            <li><strong>环境点检：</strong> 赛前必须确认 <strong>Pin（销钉）</strong> 的摆放位置是否精准，避免因起始位置微调导致自动路径偏移。</li>
+            <li><strong>设备确认：</strong> 确认启动按键（Start Button）反馈是否灵敏。</li>
+        </ul>
+
+        <h4>B. 技能挑战赛规则注意事项</h4>
+        <div class="highlight-box type-default" style="background-color: #fff5f5; border-left-color: #e74c3c;">
+            <p><strong>核心红线规则：</strong></p>
+            <ul class="notebook-list">
+                <li>机器人必须接触 <strong>红色三角形得分区 (Red Triangle Goal)</strong>。</li>
+                <li>操作过程中仅允许使用 <strong>红色装填区 (Red Load Zone)</strong>。</li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="sheet">
+        <h1>8.1 一般策略规划（续）</h1>
+
+
+            <h3 style="color: #F57F17;">二、 临场策略 (On-field Tactics)</h3>
+            <p>赛场瞬息万变，操作手必须内化以下临场准则：</p>
+            <ol class="notebook-list">
+                <li><strong>运动终止：</strong> 必须严格遵守在计时结束的瞬间停止一切运动，避免被判罚违规。</li>
+                <li><strong>换手窗口：</strong> 严格遵守预设的换手时间。若在计划时间内未完成既定动作，<strong>应果断提前换手</strong>，为后手留出调整状态的空间。</li>
+                <li><strong>冲突避让：</strong> 搭建高塔时若与队友在中心区发生空间冲突，可主动<strong>慢1秒</strong>让对方先完成，确保双方得分效率。</li>
+                <li><strong>容错机制：</strong> 当边桩在抓取 Beam 时意外碰掉，后手操作手需立即切换思路，通过<strong>“搭双碟”</strong>模式将其送入三角区以挽回损失。</li>
+                <li><strong>路径调整：</strong>
+                    若中心岛双叠位置偏移，<strong>不要专门停下调整</strong>；应利用前往装填区的路程，通过<strong>倒车动作</strong>进行顺带调整。</li>
+            </ol>
+    </div>
+
+
 
     <!-- ================= PAGE 127: 战术规划 ================= -->
     <div class="sheet">
-        <h1>8.1 战术规划：基于二代车特性的策略</h1>
+        <h1>8.2 基于二代车特性的策略</h1>
 
         <p>鉴于二代车在底盘通过性和三角区定位上的改进，我们依据《路线策略对比图》制定了针对“校际联赛”的高分策略。</p>
 
@@ -215,7 +255,7 @@
 
     <!-- ================= PAGE 128: 赛前准备 ================= -->
     <div class="sheet">
-        <h1>8.2 赛前集训与检查 (Pre-Match)</h1>
+        <h1>8.3 赛前集训与检查 (Pre-Match)</h1>
 
         <p>赛前一周（10月18-19日），我们在叶恒瑞家中进行了高强度的针对性集训，重点解决了《训练记录》中暴露出的隐患。</p>
 
@@ -239,6 +279,8 @@
                 </li>
             </ul>
         </div>
+        <img src="assets/ch08/8_2_1.webp" alt="赛前检查清单"
+            style="display: block;height:280px; margin: 10px auto; border-radius: 10px;">
 
         <!-- <div class="img-placeholder" style="height: 200px;">
             [图片：赛前检查清单与机器调试照片]
@@ -248,7 +290,7 @@
 
     <!-- ================= PAGE 129: 比赛记录 ================= -->
     <div class="sheet">
-        <h1>8.3 比赛记录：北京校际联赛</h1>
+        <h1>8.4 比赛记录：北京校际联赛</h1>
 
         <div class="info-box"
             style="background: #f4f4f4; padding: 15px; border-left: 5px solid #008080; margin-bottom: 20px;">
@@ -306,7 +348,7 @@
 
     <!-- ================= PAGE 130: 赛后分析 ================= -->
     <div class="sheet">
-        <h1>8.4 赛后技术复盘</h1>
+        <h1>8.5 赛后技术复盘</h1>
 
         <p>赛后（11月8日-9日），全队进行了详细的总结会议，结合《训练记录》中的反馈，我们发现了几个关键的技术瓶颈。</p>
 
@@ -338,7 +380,7 @@
 
     <!-- ================= PAGE 131: 总结与展望 ================= -->
     <div class="sheet">
-        <h1>8.5 总结与未来计划</h1>
+        <h1>8.6 总结与未来计划</h1>
 
         <p>
             北京校际联赛的成绩（排名 14）虽然未达夺冠预期，但二代车展现出的工程进步是令人振奋的。针对暴露出的问题，我们制定了备战“北京市教委赛”的改进计划。
