ch06: added WRC世界机器人大赛北京选拔赛

--- a/engineering_notebook/ch06.html
+++ b/engineering_notebook/ch06.html
@@ -248,10 +248,133 @@
             </div>
         </div>
     </div>
+    <div class="sheet">
+        <h1>6.5 WRC 北京选拔赛（1）</h1>
 
+        <div class="highlight-box type-default">
+            <p><strong>赛事名称：</strong> 2025-2026 WRC 世界机器人大赛北京选拔赛</p>
+            <p><strong>时间：</strong> 2025年7月18日 - 7月20日</p>
+            <p><strong>地点：</strong> 北京十一学校丰台中学</p>
+            <p><strong>参赛目标：</strong> 争取 8月世界机器人大赛（World Robot Contest）晋级资格</p>
+        </div>
+
+        <h3>(一) 比赛日程记录 (Schedule)</h3>
+        <p>这是我们首次面对正式的大型赛事流程，赛程安排极其紧凑。</p>
+
+        <ul class="log-list">
+            <li>
+                <strong>7月18日 (Day 0)：</strong><br>
+                14:00-18:00 进场检录。完成机器规格检查与队伍登记。
+            </li>
+            <li>
+                <strong>7月19日 (Day 1)：资格赛启动</strong><br>
+                08:00 入场，布置备赛区赛台（用于与联队合练）。<br>
+                09:30 <strong>选手会议：</strong> 明确评判标准，领取对战表（Match List）。<br>
+                10:00-18:00 <strong>资格赛 (Qualifying Matches)：</strong> 全天高强度对战，中间穿插午餐休整。
+            </li>
+            <li>
+                <strong>7月20日 (Day 2)：决赛日</strong><br>
+                08:00-09:00 <strong>联队选择 (Alliance Selection)：</strong> 排名靠前队伍进行双向选择。<br>
+                09:00-12:00 <strong>决赛 (Finals)：</strong> 决定最终名次。<br>
+                13:00 颁奖典礼。
+            </li>
+        </ul>
+    </div>
+
+    <div class="sheet">
+        <h1>6.5 WRC 北京选拔赛（2）赛况与突发故障</h1>
+
+        <h3>(二) 得分表现与现场复盘</h3>
+        <p><strong>资格赛队友：</strong> 71548B, 1853A, 12609A, 88299C, 1853C</p>
+
+        <div class="two-column-layout">
+            <div class="column">
+                <h3 class="text-highlight">赛场初体验</h3>
+                <p><strong>赛事表冲击：</strong> 第一次拿到密密麻麻排满三页的对战表，瞬间感到信息过载。我们花费大量时间勾画队号，确认上场次序。</p>
+                <p><strong>外联挑战：</strong> 现场环境嘈杂，寻找联队队友比预想困难。需要在拥挤的人群和移动的机器间穿梭，深刻体会到“大声沟通”与“主动出击”的重要性。</p>
+            </div>
+            <div class="column">
+                <h3 class="text-error">重大故障：中途停机</h3>
+                <p><strong>场次：</strong> 联队队友 12609A</p>
+                <p><strong>现象：</strong> 机器在执行“91分策略”的扭身搭塔动作时，突然失去响应。反复按键无效，主控屏幕无显示。</p>
+                <p><strong>处理：</strong> 向裁判示意暂停，将机器抱下赛台尝试重启失败。最终被迫退出该局。</p>
+                <p><strong>结果：</strong> <span class="text-error">本局 0 分</span>（严重拉低了联队排名）。</p>
+            </div>
+        </div>
+    </div>
+    <div class="sheet">
+        <h1>6.5 WRC 北京选拔赛（3）比赛结果</h1>
+
+        <h3 class="text-highlight">决赛逆袭</h3>
+        <p>虽有事故在前，但凭借其他场次的稳定发挥，我们成功入围决赛。</p>
+        <ul>
+            <li><strong>决赛队友：</strong> 22988A 联队</li>
+            <li><strong>最终得分：</strong> <strong>86 分</strong></li>
+            <li><strong>最终奖项：</strong> <strong>二等奖 (Second Prize)</strong> - 成功晋级</li>
+        </ul>
+        <img src="assets/ch06/6_5_1.webp" alt="二等奖"
+            style="height:400px; display: block; margin: 20px auto; border-radius: 10px;">
+
+    </div>
+
+    <div class="sheet">
+        <h1>6.5 WRC 北京选拔赛（4）赛后分析与教训</h1>
+
+        <h3>(三) 赛后分析与教训总结 (Post-Match Analysis)</h3>
+        <!-- <p>本次选拔赛虽然结果尚可，但过程中的工程准备不足暴露无遗。</p> -->
+
+
+        <table class="strategy-table">
+            <thead>
+                <tr>
+                    <th width="16%">类别</th>
+                    <th width="35%">暴露的问题</th>
+                    <th>改进/整改措施</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>流程/外联</strong></td>
+                    <td>
+                        <span class="text-error">极度被动</span><br>
+                        对流程不熟，外联主要靠队友找上门，导致合练时间被压缩。
+                    </td>
+                    <td>制定“外联话术单”，下一场比赛必须主动按表找人，提前确立主导权。</td>
+                </tr>
+                <tr>
+                    <td><strong>训练策略</strong></td>
+                    <td>
+                        <span class="text-error">路线抗干扰差</span><br>
+                        后手在遇到场地Pin被冲散的情况时，未能灵活处理，仍死板执行原定路线。
+                    </td>
+                    <td>增加“混乱场地”模拟训练，练习在非标准情况下的补救策略。</td>
+                </tr>
+                <tr>
+                    <td><strong>物资准备</strong></td>
+                    <td>
+                        <span class="text-error">后勤重大失误</span><br>
+                        仅带了2块电池且未带插排，导致备赛区充电困难，极其焦虑。
+                    </td>
+                    <td>建立《赛前物资检查清单 (Checklist)》，强制要求携带排插及至少4块满电电池。</td>
+                </tr>
+                <tr>
+                    <td><strong>工程隐患</strong></td>
+                    <td>
+                        <span class="text-error">不明原因停机</span><br>
+                        赛中掉电导致0分是致命错误。
+                    </td>
+                    <td><strong>立即执行：</strong> 排查电池接口松动及主控固件稳定性，模拟震动测试。</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p style="color: #444;"><strong>总结：</strong> 虽然拿到了晋级资格，但暴露出的后勤和稳定性问题必须在8月正赛前彻底解决。</p>
+        <!-- <div class="result-summary" style="margin-top: 20px;">
+        </div> -->
+    </div>
     <!-- ================= PAGE 114: 新增训练日志 ================= -->
     <div class="sheet">
-        <h1>6.5 专项集训：备战石家庄</h1>
+        <h1>6.6 专项集训：备战石家庄</h1>
 
         <p>为备战即将在石家庄举行的赛事，我们开展了高强度的针对性集训，重点突破高分动作的准确率。</p>
 
@@ -290,7 +413,7 @@
         </div>
     </div>
     <div class="sheet">
-        <h1>6.5 专项集训：备战石家庄（续）</h1>
+        <h1>6.6 专项集训：备战石家庄（续）</h1>
         <p class="text-highlight">复盘总结（续）</p>
         <ul class="log-list">
             <li>
@@ -308,7 +431,7 @@
     </div>
     <!-- ================= PAGE 115: 参赛概况与策略 ================= -->
     <div class="sheet">
-        <h1>6.6 实战记录：胜炫北京城市赛</h1>
+        <h1>6.7 胜炫北京城市赛（1）</h1>
 
         <div class="highlight-box type-default">
             <p><strong>赛事名称：</strong> 2025 胜炫北京城市赛 (Beijing Urban Competition)</p>
@@ -359,7 +482,7 @@
 
     <!-- ================= PAGE 116: 比赛结果与复盘 ================= -->
     <div class="sheet">
-        <h1>6.7 赛后评估与成绩公示</h1>
+        <h1>6.7 胜炫北京城市赛（2）赛后评估</h1>
 
         <p>尽管一代车存在底盘速度慢、垂直行程有限等先天劣势，但得益于赛前对“钩爪”和“摩擦力”的针对性优化，机器在实战中表现出了较高的稳定性。</p>
 
@@ -372,7 +495,7 @@
 
     </div>
     <div class="sheet">
-        <h1>6.7 赛后评估与成绩公示（续）</h1>
+        <h1>6.7 胜炫北京城市赛（2）成绩公示</h1>
         <h3>最终成绩 (Final Results)</h3>
         <table class="result-table">
             <thead>
