--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -121,12 +121,13 @@
                 <!-- Chapter 6 -->
                 <li style="margin: 5px 0;"><strong><a href="ch06.html">第六章：测试验证与实战评估</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">6.1 单元测试：抓取系统的摩擦力优化</li>
-                        <li style="margin: 5px 0;">6.2 功能测试：堆叠定位精度的提升</li>
+                        <li style="margin: 5px 0;">6.1 单元测试：底盘与抓取系统</li>
+                        <li style="margin: 5px 0;">6.2 功能测试：堆叠与挂钩的改进</li>
                         <li style="margin: 5px 0;">6.3 系统集成：半自动化逻辑导入</li>
-                        <li style="margin: 5px 0;">6.4 实战记录：胜炫北京城市赛</li>
-                        <li style="margin: 5px 0;">6.5 赛后技术评估：优势与缺陷</li>
-                        <li style="margin: 5px 0;">6.6 比赛数据与结果公示</li>
+                        <li style="margin: 5px 0;">6.4 模拟实战：团队配合演练</li>
+                        <li style="margin: 5px 0;">6.5 WRC 北京选拔赛</li>
+                        <li style="margin: 5px 0;">6.6 专项集训：备战石家庄</li>
+                        <li style="margin: 5px 0;">6.7 胜炫北京城市赛</li>
                     </ul>
                 </li>
             </ul>
