ch08: added 亚开赛

--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -194,16 +194,16 @@
         <h1>8.1 一般策略规划（续）</h1>
 
 
-            <h3 style="color: #F57F17;">二、 临场策略 (On-field Tactics)</h3>
-            <p>赛场瞬息万变，操作手必须内化以下临场准则：</p>
-            <ol class="notebook-list">
-                <li><strong>运动终止：</strong> 必须严格遵守在计时结束的瞬间停止一切运动，避免被判罚违规。</li>
-                <li><strong>换手窗口：</strong> 严格遵守预设的换手时间。若在计划时间内未完成既定动作，<strong>应果断提前换手</strong>，为后手留出调整状态的空间。</li>
-                <li><strong>冲突避让：</strong> 搭建高塔时若与队友在中心区发生空间冲突，可主动<strong>慢1秒</strong>让对方先完成，确保双方得分效率。</li>
-                <li><strong>容错机制：</strong> 当边桩在抓取 Beam 时意外碰掉，后手操作手需立即切换思路，通过<strong>“搭双碟”</strong>模式将其送入三角区以挽回损失。</li>
-                <li><strong>路径调整：</strong>
-                    若中心岛双叠位置偏移，<strong>不要专门停下调整</strong>；应利用前往装填区的路程，通过<strong>倒车动作</strong>进行顺带调整。</li>
-            </ol>
+        <h3 style="color: #F57F17;">二、 临场策略 (On-field Tactics)</h3>
+        <p>赛场瞬息万变，操作手必须内化以下临场准则：</p>
+        <ol class="notebook-list">
+            <li><strong>运动终止：</strong> 必须严格遵守在计时结束的瞬间停止一切运动，避免被判罚违规。</li>
+            <li><strong>换手窗口：</strong> 严格遵守预设的换手时间。若在计划时间内未完成既定动作，<strong>应果断提前换手</strong>，为后手留出调整状态的空间。</li>
+            <li><strong>冲突避让：</strong> 搭建高塔时若与队友在中心区发生空间冲突，可主动<strong>慢1秒</strong>让对方先完成，确保双方得分效率。</li>
+            <li><strong>容错机制：</strong> 当边桩在抓取 Beam 时意外碰掉，后手操作手需立即切换思路，通过<strong>“搭双碟”</strong>模式将其送入三角区以挽回损失。</li>
+            <li><strong>路径调整：</strong>
+                若中心岛双叠位置偏移，<strong>不要专门停下调整</strong>；应利用前往装填区的路程，通过<strong>倒车动作</strong>进行顺带调整。</li>
+        </ol>
     </div>
 
 
@@ -287,10 +287,129 @@
         </div> -->
 
     </div>
+    <div class="sheet">
+        <h1>8.4 亚洲公开赛华北大区赛（1）</h1>
 
+        <div class="info-box"
+            style="background: #e8f6f3; padding: 15px; border-left: 5px solid var(--primary-color); margin-bottom: 20px;">
+            <p><strong>赛事名称：</strong> 2025-2026赛季VEX机器人亚洲公开赛华北大区（石家庄站）</p>
+            <p><strong>时间：</strong> 2025年10月4日 - 10月7日</p>
+            <p><strong>性质：</strong> 首次全封闭式长赛程体验</p>
+        </div>
+
+        <h3 class="text-teal">一、 比赛日程记录 (Timeline)</h3>
+        <table class="checklist-table" style="font-size: 14px;">
+            <tr style="background-color: #f9f9f9;">
+                <td width="20%"><strong>10.04</strong></td>
+                <td>全天报到注册、机器检录。</td>
+            </tr>
+            <tr>
+                <td><strong>10.05</strong></td>
+                <td>
+                    09:00 开幕式 & 队长会议<br>
+                    11:00 练习赛<br>
+                    13:00-18:00 资格赛、技能赛启动
+                </td>
+            </tr>
+            <tr style="background-color: #f9f9f9;">
+                <td><strong>10.06</strong></td>
+                <td>
+                    全天资格赛与技能赛。<br>
+                    <span class="text-red">关键节点：</span> 17:00 联队选择与代码最终测试。
+                </td>
+            </tr>
+            <tr>
+                <td><strong>10.07</strong></td>
+                <td>09:00 决赛阶段<br>
+                    3:00 颁奖典礼<br>
+                    16:00 结束。</td>
+            </tr>
+        </table>
+
+    </div>
+    <div class="sheet">
+        <h1>8.4 亚洲公开赛华北大区赛（2）</h1>
+        <h3 class="text-teal" style="margin-top: 20px;">二、 赛况与表现 (Performance)</h3>
+        <div class="two-column-layout">
+            <div class="column">
+                <h4>比赛数据</h4>
+                <ul class="notebook-list">
+                    <li><strong>场次：</strong> 共完成 8 场资格赛。</li>
+                    <li><strong>最高分：</strong> <span class="text-teal"><strong>277分</strong></span> (联手 683A)。</li>
+                    <li><strong>最终排名：</strong> 决赛联手 391A，排名第 17 名。</li>
+                    <li><strong>奖项：</strong> 获得一等奖（遗憾未晋级西安国赛）。</li>
+                </ul>
+            </div>
+            <img src="assets/ch08/8_4_1.webp" alt="北京市教委机器人大赛参赛照片"
+                style="display: block;height:260px; margin: 10px auto; border-radius: 10px;">
+
+            <div class="column">
+                <h4>现场体验与突发状况</h4>
+                <ul class="notebook-list">
+                    <li><strong>封闭环境压力：</strong> 首次面对全封闭赛场与“封箱”规则（赛后机器贴封条不可带出），三人团队心理高度紧张。</li>
+                    <li><strong>评审抽查：</strong> 参与了第一版工程笔记的评审答辩，被重点考察了零件认知与程序掌握能力。</li>
+                    <li><strong>紧急维修：</strong> <span class="text-red">严重故障！</span>
+                        备赛中横销断裂。现场紧急借用短销固定，操作手在极度紧张（双手颤抖）的情况下完成了修复并坚持完赛。</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    <div class="sheet">
+        <h1>8.4 亚洲公开赛华北大区赛（3）</h1>
+
+        <p>石家庄站虽然获得了一等奖，但暴露出的硬件隐患和准备不足几乎导致比赛崩盘。以下是基于本次惨痛教训的深度复盘。</p>
+
+        <h3 class="text-red">严重硬件事故分析 (Critical Issues)</h3>
+        <div class="highlight-box type-default" style="background-color: #fff5f5; border-left-color: #e74c3c;">
+            <p><strong>电机过热危机 (Overheating Incident)</strong></p>
+            <p><strong>现象：</strong> 赛前一晚发现两个核心电机严重发烫，导致功率下降。</p>
+            <p><strong>原因：</strong> 高强度连续训练，且缺乏散热机制。</p>
+            <p><strong>后果：</strong>
+            <ul class="notebook-list" style="margin-bottom:0;">
+                <li>现场没有备用电机，无法更换。</li>
+                <li>只能购买“速冷气罐”物理降温，被迫中断了关键的赛前练习。</li>
+                <li>比赛全程提心吊胆，存在极大的失控风险。</li>
+            </ul>
+            </p>
+        </div>
+
+    </div>
+    <div class="sheet">
+        <h1>8.4 亚洲公开赛华北大区赛（4）</h1>
+        <h3 class="text-teal" style="margin-top: 20px;">改进措施与行动清单 (Action Plan)</h3>
+
+        <h4>1. 物料清单重构 (Inventory Update)</h4>
+        <p>吸取无备件可用的教训，重新制定了必须携带的“保命清单”：</p>
+        <table style="width: 100%; margin-bottom: 20px;">
+            <tr style=" font-weight: bold;">
+                <td style="padding: 8px;">类别</td>
+                <td style="padding: 8px;">新增必带备件</td>
+            </tr>
+            <tr>
+                <td style="padding: 8px; border-bottom: 1px solid ">动力系统</td>
+                <td style="padding: 8px; border-bottom: 1px solid "><strong>备用电机 x4</strong>、电机降温喷雾</td>
+            </tr>
+            <tr>
+                <td style="padding: 8px; border-bottom: 1px solid ">结构件</td>
+                <td style="padding: 8px; border-bottom: 1px solid ">长短销（Pin）、横销、气管、气杆</td>
+            </tr>
+        </table>
+
+        <h4>2. 工程笔记迭代</h4>
+        <p>第一版笔记虽然通过了抽查，但内容深度不足。后续需加强对“半年VEX学习历程”的逻辑梳理，而不仅仅是记录结果。</p>
+
+        <div class="strategy-card" style="margin-top: 30px; background-color: #fff8e1; border-left-color: #f39c12;">
+            <h4 style="margin-top: 0; color: #d35400;">⚠️ 战略转折点：启动三代车计划</h4>
+            <p>石家庄站的实战证明，二代车在应对长赛程和高强度对抗时存在底盘不稳和散热瓶颈。
+                <br><strong>决定：</strong> 在完成接下来的北京联赛后，必须立即启动 <strong>三代车 (Gen 3)</strong> 的研发与迭代。
+            </p>
+        </div>
+
+    </div>
     <!-- ================= PAGE 129: 比赛记录 ================= -->
     <div class="sheet">
-        <h1>8.4 比赛记录：北京校际联赛</h1>
+        <h1>8.5 北京校际联赛（1）</h1>
 
         <div class="info-box"
             style="background: #f4f4f4; padding: 15px; border-left: 5px solid #008080; margin-bottom: 20px;">
@@ -348,8 +467,8 @@
 
     <!-- ================= PAGE 130: 赛后分析 ================= -->
     <div class="sheet">
-        <h1>8.5 赛后技术复盘</h1>
-
+        <h1>8.5 北京校际联赛（2）赛后复盘</h1>
+        <!-- <h2>赛后技术复盘</h2> -->
         <p>赛后（11月8日-9日），全队进行了详细的总结会议，结合《训练记录》中的反馈，我们发现了几个关键的技术瓶颈。</p>
 
         <div class="two-column-layout">
@@ -369,7 +488,7 @@
                 </ul>
             </div>
         </div>
-        <img src="assets/ch08/8_4_1.webp" alt="北京市教委机器人大赛参赛照片"
+        <img src="assets/ch08/8_5_1.webp" alt="北京市教委机器人大赛参赛照片"
             style="display: block;height:280px; margin: 10px auto; border-radius: 10px;">
 
         <!-- <div class="img-placeholder" style="height: 200px;">
